Fix scroll issue on smaller breakpoints

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -370,6 +370,7 @@ body {
 
 .team {
     padding: 80px 0;
+    overflow: hidden;
 
     &__title {
         display: flex;
